Changelog :  - Fix footer sfo arrow + align arrow

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-footer.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-footer.less
@@ -15,6 +15,11 @@
 .c-footer-2018 .help-block.with-errors.c-subscribe__form--error {
     margin-bottom:10px;
 }
+
+.c-footer-2018 .c-subscribe__form .btn i.fa {
+    display:inline-block !important;
+    float:none !important;
+}
 .c-footer {
     margin-top: 10px;
 
